MOBILE-4470 context-menu: Simplify context menu to fix text wrappings

--- a/src/core/components/context-menu/context-menu-popover.scss
+++ b/src/core/components/context-menu/context-menu-popover.scss
@@ -3,9 +3,3 @@
 ion-list {
     padding: 0;
 }
-
-ion-icon[slot=start] {
-    @include margin-horizontal(0, 10px);
-    width: 0.8em;
-    height: 0.8em;
-}
